--- a/kjkp.client/public/index.html
+++ b/kjkp.client/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="shortcut icon" href="/favicon.ico">
     <script src="../node_modules/react-bootstrap/dist/js/react-bootstrap.js"></script>
     <script src="../node_modules/react-bootstrap/dist/js/react-bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
@@ -18,7 +18,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>KJKP - VIK</title>
   </head>
   <body>
     <div id="root"></div>
